Removing unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,7 @@ Thumbs.db
 #Folders#
 ############
 node_modules/
-apiKey
+neat/
+bourbon/
+webfontkit-20150906-142740.zip
+webfontkit-20150906-142740
